# Whisper-dictate

./: CLAUDE.md  README.md  dictate.py  http_server.py  pyproject.toml  start-whisper-dictate.sh  stop-whisper-dictate.sh  transcribe.py  whisper-server.py
